[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI/brown_button/pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/brown_button/hover.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/brown_button/normal.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/game_button/GameButton.gd" type="Script" id=4]

[node name="GameButton" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -32.0
margin_right = 60.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.058
anchor_top = 0.219
anchor_right = 0.942
anchor_bottom = 0.719
margin_left = 0.04
margin_top = -0.0160007
margin_right = -0.0400009
margin_bottom = -0.0160027
text = "play"
align = 1
valign = 1
uppercase = true

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="." to="." method="_on_GameButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_GameButton_button_up"]
[connection signal="pressed" from="." to="." method="_on_GameButton_pressed"]
